--- a/drdog/brand.html
+++ b/drdog/brand.html
@@ -65,6 +65,8 @@
     .main_review_tit {text-align: left; padding-left: 330px; }
     .main_review_tit2 {text-align: left; padding-left: 330px; color:rgb(175, 175, 175) }
 
+    .history { padding-left: 120px; }
+
     .pic_lst2 { clear:both; width: 100%; padding-left: 80px; }
     .pic_lst2 li { width: 21%; float:left; margin-right: 5%; margin-bottom: 140px;
     position:relative; }
@@ -248,12 +250,13 @@ $(document).ready(function(){
             <img src="./img/brand/story/brand_story_img1.jpg" width="100%" height:auto alt="사진1">
             <img src="./img/brand/story/brand_story_img2.jpg" width="100%" height:auto alt="사진2">
             <img src="./img/brand/story/brand_story_img3.jpg" width="100%" height:auto alt="사진3">
-            <img src="./img/brand/story/brand_story_img4.png" width="100%" height:auto alt="사진4">
+            <img src="./img/brand/story/brand_story_img4.png" width="100%" height:auto alt="사진4"><br><br>
 </div>
 
 <div class="content" id="page2">
     <img src="./img/brand/give/givenlove_img1.jpg" width="100%" height:auto alt="사진1">
-    <img src="./img/brand/give/givenlove_img2.jpg" width="100%" height:auto alt="사진2">  
+    <img src="./img/brand/give/givenlove_img2.jpg" width="100%" height:auto alt="사진2"><br><br> 
+    <img src="./img/brand/give/history.png" class="history" width="70%" height:auto alt="사진3"><br><br>
 </div>
 
 
